Koverentsi logo lehele lisain lightboxi

--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -114,38 +114,110 @@
     </section>
     <!-- end information section -->
     <!-- start gallery section -->
+
+    <!-- start image gallery item -->
+    <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
+    <!-- start image gallery item -->
+    <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674559537/Koduleht/Konverentsi_lehe_pilt_aigfbe.jpg"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674559537/Koduleht/Konverentsi_lehe_pilt_aigfbe.jpg"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
+    <!-- start image gallery item -->
+    <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
     <section class="wow animate__fadeIn">
         <div class="container">
             <div class="row">
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652250/Koduleht/juhtimiskonverents_i1pjds.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641652639/Koduleht/kvaliteedi_logo_wcrj4z.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
-
                     <a href="images/Data talks_esitlus.pdf" target="_blank"><img
                             src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674476214/Koduleht/Data_talks_esitlus_copy_copy-44_nkdbup.svg"
-                            class="w-100 zoom hoverikoon" alt="" /> <img src="" alt="">
-
-
+                            class="w-100  hoverikoon" alt="" /> <img src="" alt="">
                 </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
-                        class="w-100 zoom" alt="" />
-                </div>
-
 
             </div>
         </div>
     </section>
+    <!-- start image gallery item -->
+    <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
+                        alt="" class="w-50 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
     <!-- end gallery section -->
     <!-- start gallery section -->
     <!-- <section class="wow animate__fadeIn bg-light-gray">
