pipewelli ja click here parandamine

--- a/pipewell.html
+++ b/pipewell.html
@@ -98,30 +98,77 @@
         </div>
     </section>
     <!-- end information section -->
-    <!-- start gallery section -->
-    <section class="wow animate__fadeIn">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641659205/Koduleht/Pipewell_logo_elzffk.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673800380/Koduleht/pipewell-tupo_turvaala_mmgwhq.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                    <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673800133/Koduleht/pipewell-tupo_minumum_ktjmon.jpg"
-                        class="w-100 zoom" alt="" />
-                </div>
-                <!-- <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641660287/Koduleht/pipewell_visitkaart_taga_cvd0cm.jpg" class="w-100" alt=""/>
-                    </div> -->
 
-            </div>
-        </div>
-    </section>
-    <!-- end gallery section -->
+    <!-- start image gallery item -->
+    <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629523/Koduleht/pipewell_reeglid2_copy_ql0sgr.webp"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
+     <!-- start image gallery item -->
+     <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629807/Koduleht/pipewell_reeglid4_copy_zgfg4f.webp"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629807/Koduleht/pipewell_reeglid4_copy_zgfg4f.webp"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
+     <!-- start image gallery item -->
+     <li class="grid-item wow animate__fadeInUp">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629962/Koduleht/pipewell_reeglid7_copy_zdxwwo.webp"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674629962/Koduleht/pipewell_reeglid7_copy_zdxwwo.webp"
+                        alt="" class="w-70 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </li>
+    <!-- end image gallery item -->
+
+    
     <!-- start gallery section -->
     <!-- <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
