pipewelli mockupi muutmine

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -171,7 +171,7 @@
     <!-- start image gallery item -->
     <li class="grid-item wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
-            class=" lightbox-group-gallery-item ">
+            class=" lightbox-group-gallery-item zoomin ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
                         src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
