syte lehele lightboxi lisamine

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
-                        <li class="grid-item grid-item-double hindamine wow animate__fadeInUp">
+                        <li class="grid-item grid-item-double hindamine wow animate__fadeInUp disain">
                             <a href="syte.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -434,8 +434,7 @@
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Syte
                                                     koduleht</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Kooli tööd
-                                                    2021 / 2022</p>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Disain</p>
                                             </div>
                                         </div>
                                     </figcaption>
