spordib2nnerile lightboxi lisamine

--- a/daim_marabou_uhistend.html
+++ b/daim_marabou_uhistend.html
@@ -63,7 +63,7 @@
         <div class="container padding-two-tb">
             <div class="row">
                 <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                    <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo
+                    <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Reklaam
                         &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
                     <h1
                         class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">
