--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Juhtimiskonverents</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
                                                     Reklaam</p>
                                             </div>
                                         </div>
@@ -284,7 +284,7 @@
                             </a>
                         </li>
                         <!-- end portfolio item -->
-                        <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
+                        <li class="grid-item grid-item-double logo disain cvi wow animate__fadeInUp" data-wow-delay="0.2s">
                             <a href="pipewell.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -296,8 +296,8 @@
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Pipewell</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
-                                                    Disain</p>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo,
+                                                    Disain ja CVI</p>
                                             </div>
                                         </div>
                                     </figcaption>
@@ -373,7 +373,7 @@
                         </li> -->
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
-                        <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                        <li class="grid-item wow animate__fadeInUp  reklaam disain " data-wow-delay="0.4s">
                             <a href="daim_marabou_uhistend.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -386,7 +386,7 @@
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Daim
                                                     ja Marabou ühisstend</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Reklaam ja
                                                     Disain</p>
                                             </div>
                                         </div>
@@ -397,7 +397,7 @@
                         <!-- end portfolio item -->
 
                         <!-- start  portfolio item -->
-                        <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                        <li class="grid-item wow animate__fadeInUp reklaam disain" data-wow-delay="0.4s">
                             <a href="mars_roll_up_b2nner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -409,9 +409,8 @@
                                                 <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                                 <span
                                                     class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Mars
-                                                    roll-up
-                                                    bänner</span>
-                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Trükis js
+                                                    roll-up bänner</span>
+                                                <p class="no-letter-spacing text-small mb-0 text-medium-gray">Reklaam ja
                                                     Disain</p>
                                             </div>
                                         </div>
@@ -421,7 +420,7 @@
                         </li>
                         <!-- end portfolio item -->
                         <!-- start  portfolio item -->
-                        <li class="grid-item grid-item-double hindamine wow animate__fadeInUp disain">
+                        <li class="grid-item grid-item-double disain wow animate__fadeInUp disain">
                             <a href="syte.html">
                                 <figure>
                                     <div class="portfolio-img"><img
@@ -444,7 +443,7 @@
                         <!-- end portfolio item-->
 
                         <!-- start portfolio item -->
-                        <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
+                        <li class="grid-item grid-item-double trükis disain  reklaam wow animate__fadeInUp">
                             <a href="spordibanner.html">
                                 <figure>
                                     <div class="portfolio-img"><img
