--- a/daim_marabou_uhistend.html
+++ b/daim_marabou_uhistend.html
@@ -109,49 +109,49 @@
     <!-- end information section -->
 
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732667/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_qn9cum.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732667/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_qn9cum.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
+
+    <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732667/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_qn9cum.jpg"
+        class=" lightbox-group-gallery-item wow animate__fadeInUp">
+        <figure>
+            <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732667/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_qn9cum.jpg"
+                    alt="" class="w-60 zoomin " />
+            </div>
+            <figcaption>
+                <div class="portfolio-hover-main text-center">
+                    <div class="portfolio-hover-box align-middle">
+                        <div class="portfolio-hover-content position-relative ">
+                            <i class="ti-zoom-in text-white-2 fa-2x"></i>
                         </div>
                     </div>
-                </figcaption>
-            </figure>
-        </a>
-    </li>
+                </div>
+            </figcaption>
+        </figure>
+    </a>
+
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732862/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_2_jmlhiy.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732862/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_2_jmlhiy.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
+
+    <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732862/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_2_jmlhiy.jpg"
+        class=" lightbox-group-gallery-item  ">
+        <figure>
+            <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                    src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1673732862/Koduleht/Marabou_daim-%C3%BChisdisplay_270522_2_jmlhiy.jpg"
+                    alt="" class="w-60 zoomin wow animate__fadeInUp" />
+            </div>
+            <figcaption>
+                <div class="portfolio-hover-main text-center">
+                    <div class="portfolio-hover-box align-middle">
+                        <div class="portfolio-hover-content position-relative ">
+                            <i class="ti-zoom-in text-white-2 fa-2x"></i>
                         </div>
                     </div>
-                </figcaption>
-            </figure>
-        </a>
-    </li>
+                </div>
+            </figcaption>
+        </figure>
+    </a>
+
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
