--- a/ajakiri.html
+++ b/ajakiri.html
@@ -120,13 +120,13 @@
     <!-- end information section -->
     <!-- start gallery section -->
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
+    <div class="grid-item margin-one-all wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569772/Koduleht/esikaas_nkggfi.jpg"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
                         src="
-                                https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569772/Koduleht/esikaas_nkggfi.jpg" alt="" class="w-30 zoomin " />
+                                https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569772/Koduleht/esikaas_nkggfi.jpg" alt="" class="w-30 zoomin wow animate__fadeInUp " />
                 </div>
                 <figcaption>
                     <div class="portfolio-hover-main text-center">
@@ -139,16 +139,16 @@
                 </figcaption>
             </figure>
         </a>
-    </li>
+    </div>
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
+    <div class="grid-item margin-one-all wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665570226/Koduleht/mida_p6nevat_kuressaares_nqbb18.jpg"
             class=" lightbox-group-gallery-item ">
             <figure>
                 <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src=" https://res.cloudinary.com/dxxjplpwo/image/upload/v1665570226/Koduleht/mida_p6nevat_kuressaares_nqbb18.jpg" 
+                        src=" https://res.cloudinary.com/dxxjplpwo/image/upload/v1665570226/Koduleht/mida_p6nevat_kuressaares_nqbb18.jpg"
                         alt="" class="w-70 zoomin " />
                 </div>
                 <figcaption>
@@ -162,10 +162,10 @@
                 </figcaption>
             </figure>
         </a>
-    </li>
+    </div>
     <!-- end image gallery item -->
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
+    <div class="grid-item margin-one-all wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
             class=" lightbox-group-gallery-item zoomin ">
             <figure>
@@ -184,11 +184,11 @@
                 </figcaption>
             </figure>
         </a>
-    </li>
+    </div>
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
+    <div class="grid-item margin-one-all wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674479550/Koduleht/mesist_ja_interwew_tehnologia_oct_5_copy_rukubs.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
@@ -207,7 +207,7 @@
                 </figcaption>
             </figure>
         </a>
-    </li>
+    </div>
     <!-- end image gallery item -->
 
 
