lehtedelt punkite 2ra v6tmine

--- a/ajakiri.html
+++ b/ajakiri.html
@@ -143,7 +143,7 @@
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <div class="grid-item margin-one-all wow animate__fadeInUp">
+    <div class="grid-item margin-two-top wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665570226/Koduleht/mida_p6nevat_kuressaares_nqbb18.jpg"
             class=" lightbox-group-gallery-item ">
             <figure>
@@ -165,7 +165,7 @@
     </div>
     <!-- end image gallery item -->
     <!-- start image gallery item -->
-    <div class="grid-item margin-one-all wow animate__fadeInUp">
+    <div class="grid-item  wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1665569400/Koduleht/Meist_wfgayg.jpg"
             class=" lightbox-group-gallery-item zoomin ">
             <figure>
@@ -188,7 +188,7 @@
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <div class="grid-item margin-one-all wow animate__fadeInUp">
+    <div class="grid-item  wow animate__fadeInUp">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674479550/Koduleht/mesist_ja_interwew_tehnologia_oct_5_copy_rukubs.webp"
             class=" lightbox-group-gallery-item ">
             <figure>
@@ -400,8 +400,8 @@
                 </div> -->
                 <div class="w-45 text-end">
                     <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">
-                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next
-                            Project</span>
+                        <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine
+                            projekt</span>
                         <a href="konverents_logo.html">
                             <i class="ti-arrow-right blog-nav-icon"></i>
                             Konverentsi logo
