--- a/eesti_ekspress.html
+++ b/eesti_ekspress.html
@@ -106,7 +106,7 @@
     <!-- end information section -->
 
     <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp">
+    <div class="grid-item wow animate__fadeInUp margin-two-top">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641657517/Koduleht/Eesti_ekpressi_esikaas_rf6tik.jpg"
             class="lightbox-group-gallery-item">
             <figure>
@@ -129,7 +129,7 @@
     <!-- end image gallery item -->
 
     <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp margin top">
+    <div class="grid-item wow animate__fadeInUp ">
         <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641658151/Koduleht/eesti_ekspress_orginaal_900x600px_tlgwrl.jpg"
             class=" lightbox-group-gallery-item ">
             <figure>
