syte punktide 2ra votmine

--- a/syte.html
+++ b/syte.html
@@ -90,7 +90,7 @@
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a
                                 href="#">www.freepik.com</li>
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Koduleht:</label><a
-                                href="https://oliverjuss.github.io/syte/">Syte</li>
+                                href="https://oliverjuss.github.io/syte/">Syte</a></li>
                         <li class="margin-5px-bottom  "><label class="w-30 d-inline-block">Programmid:</label>
                             <!-- see on ai icon -->
 
