--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -80,7 +80,45 @@
                         Siin saavad andmed omavahel kõnelda kui ka erinevaid kooslusi ja ühendusi moodustada. Kokku
                         esitasin kliendile 8 erinevat logokujundust.
                     </p>
+                    <ol type="1"><label for="">Protsess</label>
+                        <li>
+                            Tutvusin Eesti Kvaliteedi ühingu eelnevaltel aastatel kujundatud konverentsi bänneritega, et
+                            saada ülevaade, mis stiilis
+                            on need tehtud ja kuidas minu kujundus peaks välja nägema, et see oleks sarnases stiilis.
+                        </li>
+                        <li>
+                            Hakkasin kavandama erinevaid logosid, mis annaks edasi tunnet, et andmed omavahel suhtlevad
+                            ja räägivad.
+                        </li>
+                        <li>
+                            Valisin välja parimad ideed ning vektoriseerisin need Adobe Illustratori abiga.
+                        </li>
+                        <li>
+                            Saatsin kavandid ning koostasin kliendile hinnapakkumise.
+                        </li>
+                        <li>
+                            Klient sai inspiratsiooni minu kavanditest ning soovis, et logol võiks olla kujutatud aju
+                            mille sees toimuvad suured
+                            analüüsiprotsessid.
+                        </li>
+                        <li>
+                            Kavandasin uued logod ja saatsin uuesti kliendile tutvumiseks.
+                        </li>
+                        <li>
+                            Kui logo oli kliendi poolt kinnitatud siis hakkasin kavandama reklaambännereid.
+                        </li>
+                        <li>
+                            Tegin erinevaid reklaambänneri kavandeid ja saatsin kliendile tutvumiseks.
+                        </li>
+                        <li>
+                            Klient kinnitas reklaambänneri kujundused.
+                        </li>
+                        <li>
+                            Arhiveerisin korrektselt kujundusfailid ning edastasin need nõutud kujul kliendile.
+                        </li>
+                    </ol>
                 </div>
+
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
                         <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Eesti
@@ -111,26 +149,22 @@
     <!-- end information section -->
     <!-- start gallery section -->
 
-    <!-- start image gallery item -->
-    <div class="grid-item wow animate__fadeInUp margin-two-top">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
-                        alt="" class="w-70 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
+    <figure>
+        <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
+                alt="" class="w-70 zoomin " />
+        </div>
+        <figcaption>
+            <div class="portfolio-hover-main text-center">
+                <div class="portfolio-hover-box align-middle">
+                    <div class="portfolio-hover-content position-relative ">
+                        <i class="ti-zoom-in text-white-2 fa-2x"></i>
                     </div>
-                </figcaption>
-            </figure>
-        </a>
+                </div>
+            </div>
+        </figcaption>
+    </figure>
+    </a>
     </div>
     <!-- end image gallery item -->
 
