--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -148,8 +148,41 @@
     </section>
     <!-- end information section -->
     <!-- start gallery section -->
+    <!-- start image gallery item -->
+    <div class="grid-item wow animate__fadeInUp margin-two-top">
+        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
+            class=" lightbox-group-gallery-item ">
+            <figure>
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
+                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
+                        alt="" class="w-50 zoomin " />
+                </div>
+                <figcaption>
+                    <div class="portfolio-hover-main text-center">
+                        <div class="portfolio-hover-box align-middle">
+                            <div class="portfolio-hover-content position-relative ">
+                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+    </div>
+    <section class="wow animate__fadeIn">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
+                    <a href="images/Data talks_esitlus.pdf" target="_blank"><img
+                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674476214/Koduleht/Data_talks_esitlus_copy_copy-44_nkdbup.svg"
+                            class="w-100  hoverikoon" alt="" /> <img src="" alt="">
+                </div>
 
+            </div>
+        </div>
+    </section>
     <figure>
+
         <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
                 src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641650219/Koduleht/Data-talks_esitlus_xbmbys.jpg"
                 alt="" class="w-70 zoomin " />
@@ -214,39 +247,8 @@
     </li>
     <!-- end image gallery item -->
 
-    <section class="wow animate__fadeIn">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp  ">
-                    <a href="images/Data talks_esitlus.pdf" target="_blank"><img
-                            src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674476214/Koduleht/Data_talks_esitlus_copy_copy-44_nkdbup.svg"
-                            class="w-100  hoverikoon" alt="" /> <img src="" alt="">
-                </div>
 
-            </div>
-        </div>
-    </section>
-    <!-- start image gallery item -->
-    <li class="grid-item wow animate__fadeInUp">
-        <a href="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
-            class=" lightbox-group-gallery-item ">
-            <figure>
-                <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp text-center"><img
-                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1674410372/Koduleht/kavanidid_kodqil.webp"
-                        alt="" class="w-50 zoomin " />
-                </div>
-                <figcaption>
-                    <div class="portfolio-hover-main text-center">
-                        <div class="portfolio-hover-box align-middle">
-                            <div class="portfolio-hover-content position-relative ">
-                                <i class="ti-zoom-in text-white-2 fa-2x"></i>
-                            </div>
-                        </div>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-    </li>
+
     <!-- end image gallery item -->
     <!-- end gallery section -->
     <!-- start gallery section -->
